gestion des fichiers importes

--- a/nginx-production.conf
+++ b/nginx-production.conf
@@ -16,7 +16,7 @@ server {
 	gzip_http_version 1.0;
 
 	# API Backend (PHP)
-	location ~ ^/api/(operations|comptes|tags|import) {
+	location ~ ^/api/(operations|comptes|tags|upload|imports) {
 		root /var/www/compta/backend;
 		
 		# Router toutes les requêtes vers le bon fichier PHP
